--- a/Rewrites/Backups/BiliBili.conf
+++ b/Rewrites/Backups/BiliBili.conf
@@ -1,62 +1,50 @@
-# 哔哩哔哩 //app.bilibili.com, api.bilibili.com, *.hdslb.com, api.biliapi.net, app.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com
+# 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
 ## 青少年弹窗提示 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/teenagers\/timer\/get\? url reject-dict
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/teenagers\/timer\/get\? url reject-dict
 ## 屏蔽IP请求 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
+^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject-dict
 ## 屏蔽DefaultWord  //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v\d\.Search\/Default url reject
-## 屏蔽首页右上活动 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/top\/activity url reject-dict
-## 启动时开启直连模式 //api.bilibili.com
-;^https?:\/\/api\.bilibili\.com\/x\/offline\/version url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_startup_direct.js
-## 繁体CC字幕转中文简体 //*.hdslb.com
-;^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_cc.js
-## 观影页面去广告 //api.bilibili.com, api.biliapi.net
-^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 应用开屏去广告 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/show url reject-dict
-## 应用开屏广告预加载 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 去除统一设置的皮肤 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 热搜发现 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/search\/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## Defaultword //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/v\d\/search\/defaultwords url reject-dict
+^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject-dict
+## 屏蔽首页右上活动[需卸载重装] //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/resource\/top\/activity url reject-dict
 ## Material_Ad //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
 ## 小卡片广告 //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/cards url reject-dict
-## 解除SIM卡地区限制 //app.biliintl.com
-;(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
-(^https?://app\.biliintl\.com/(x/)?(intl|dm|reply|history|v\d/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
-## 解除短信登录限制 //passport.biliintl.com, app.biliintl.com
-^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/(sms\/send|reg\/sms|oauth\d\/access_token|login\/sms) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
-(^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
-^https?:\/\/app\.biliintl\.com/(intl\/gateway\/v\d\/app\/data\/report\/heartbeat\/mobile|x\/(history|reply)\/v\d\/add) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
 ## 去除搜索中的大家都在搜 //api.vc.bilibili.com
-^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject
+^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject-dict
 ## 去除动态中的话题 //api.vc.bilibili.com
-^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v\d\/topic_svr url reject-dict
+^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
+# 去除动态中的最常访问 //api.vc.bilibili.com
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist url reject-dict
 ## 可能的一些推广(beta) //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\? url reject-dict
 ## 漫画去广告 //manga.bilibili.com
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
+## 观影页面去广告 //api.bilibili.com, api.biliapi.net
+^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 应用开屏去广告 //app.bilibili.com
+^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/show url reject-dict
+## 应用开屏广告预加载 //app.bilibili.com
+^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 去除统一设置的皮肤 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 热搜发现 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/search\/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 推荐去广告 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/feed\/index url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 追番去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 直播去广告 //api.live.bilibili.com
-^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v\d\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 动态去广告 //api.vc.bilibili.com
-^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v\d\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 标签页处理 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 我的页面处理 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## proto去广告 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v\d\.View\/View|dynamic\.v\d\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 
-hostname = app.bilibili.com, api.bilibili.com, *.hdslb.com, api.biliapi.net, app.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com
+hostname = app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
