--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -80,20 +80,14 @@
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 应用开屏去广告 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/show url reject-dict
-## 开屏广告预加载,推荐去广告,标签页处理,去除统一设置的皮肤 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/list|feed\/index)|resource\/show\/(tab|skin\?)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 热搜发现 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/search\/square url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 开屏广告预加载,推荐去广告,标签页处理,去除统一设置的皮肤,开启1080P高码率+4K画质(番剧和影视除外),我的页面处理,热搜发现 //app.bilibili.com
+^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/list|feed\/index|account\/(mine|myinfo\?)|search\/square)|resource\/show\/(tab|skin\?)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 追番去广告 //api.bilibili.com, api.biliapi.net
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 直播去广告 //api.live.bilibili.com
 ^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 动态去广告 //api.vc.bilibili.com
 ^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 我的页面处理 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
